[metadata]
name = swift_logging
version = 0.0.1
summary = Middleware for swift logging system
description-file =
    README.md
author = A2company
author-email = admin@a2company.co.kr

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    swiftlogging


[entry_points]
paste.filter_factory =
    swift_logging = swiftlogging.middleware:filter_factory
